# bunnycdn

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: lib.rs  serde_types.rs  storage.rs
tests/: storage.rs  test.txt
