[package]
name = "bunnycdn"
version = "0.1.0"
authors = ["Sebastian Schmidt <publicarray@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/publicarray/bunnycdn"
description = """
API for BunnyCDN
"""

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2.0", features = ["macros", "net", "rt-util"] }
