[package]
name = "bunnycdn"
version = "0.1.1"
authors = ["Sebastian Schmidt <publicarray@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/publicarray/bunnycdn"
description = "Wrapper Lib around BunnyCDN's web API 🐇"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
# HTTP client
reqwest = { version = "0.10", features = ["blocking", "json", "gzip", "brotli"] }
# A generic serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
# Async
tokio = { version = "0.2.0", features = ["macros", "net", "rt-util"] }
# logging
log = "0.4"
# errors
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
lto = true
